@@ -33,6 +33,8 @@ import org.apache.lucene.search.DocIdSetIterator;
  * extends {@link DocIdSet}). Therefore its {@link #iterator()} assumes {@link
  * DocIdSetIterator#NO_MORE_DOCS} can be used as sentinel. If you intent to use
  * this value, then make sure it's not used during search flow.
+ *
+ * @lucene.internal
  */
 public class SortedVIntList extends DocIdSet {
   /** When a BitSet has fewer than 1 in BITS2VINTLIST_SIZE bits set,
@@ -80,22 +82,6 @@ public class SortedVIntList extends DocIdSet {
     }
     builder.done();
   }
-
-  /**
-   * Create a SortedVIntList from an OpenBitSet.
-   * @param  bits  A bit set representing a set of integers.
-   */
-  /*
-  public SortedVIntList(OpenBitSet bits) {
-    SortedVIntListBuilder builder = new SortedVIntListBuilder();
-    int nextInt = bits.nextSetBit(0);
-    while (nextInt != -1) {
-      builder.addInt(nextInt);
-      nextInt = bits.nextSetBit(nextInt + 1);
-    }
-    builder.done();
-  }
-  */
 
   /**
    * Create a SortedVIntList.
